# dmWorldImporter

./: .gitignore  CMakeLists.txt  README.md  WorldImporter.sln
WorldImporter/: EntityBlock.cpp  EntityBlock.h  GlobalCache.cpp  GlobalCache.h  JarReader.cpp  JarReader.h  PointCloudExporter.cpp  PointCloudExporter.h  RegionModelExporter.cpp  RegionModelExporter.h  WorldImporter.vcxproj  WorldImporter.vcxproj.filters  biome.cpp  biome.h  block.cpp  block.h  blockstate.cpp  blockstate.h  config.cpp  config.h  coord_conversion.cpp  coord_conversion.h  dat.cpp  dat.h  decompressor.cpp  decompressor.h  fileutils.cpp  fileutils.h  global.h  main.cpp  model.cpp  model.h  nbtutils.cpp  nbtutils.h  objExporter.cpp  objExporter.h  texture.cpp  texture.h  version.cpp  version.h
WorldImporter/config/: config.json
WorldImporter/config/jsons/: solids.json
WorldImporter/x64/Debug/: vc143.idb
WorldImporter/x64/Debug/WorldImporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WorldImporter.lastbuildstate
